<resources>
    <string name="app_name">BaeminAOS</string>
    <string name="price_kr">가격</string>
    <string name="choice_kr">선택</string>
    <string name="menu_main_image">menu_main_image</string>
    <string name="best_menu_image">best_menu_image</string>
    <string name="tv_cart_toolbar_title">장바구니</string>
    <string name="btn_cart_option_change">옵션변경</string>
    <string name="tv_cart_more">더 담으러 가기</string>
    <string name="tv_cart_store_2_title">황후 탕후루</string>
    <string name="tv_cart_store_2_menu">딸기탕후루 제철이 끝나가는 중</string>
    <string name="tv_cart_store_2_option">· 가격 : 3,800원</string>
    <string name="tv_cart_store_2_price">26,600원</string>
    <string name="tv_cart_store_2_number">7</string>
    <string name="tv_cart_detail_title">배달로 받을게요</string>
    <string name="tv_cart_detail_box_tip">배달팁 2,000원</string>
    <string name="tv_cart_detail_box_minute">34~44분 후 도착</string>
    <string name="tv_cart_detail_price_title">총 주문금액</string>
    <string name="tv_cart_detail_tip_title">배달팁</string>
    <string name="tv_cart_detail_price">78,600원</string>
    <string name="tv_cart_detail_tip">2,000원</string>
    <string name="tv_cart_detail_total_price_title">결제예정금액</string>
    <string name="tv_cart_detail_total_price">80,600원</string>
    <string name="tv_cart_policy">(주)우아한 형제들은 통신판매중개자이며, 통신판매의 당사자가 아닙니다. 따라서 (주)우아한형제들은 상품, 거래정보 및 거래에 대해서 책임을 지지 않습니다.</string>
    <string name="item_cart_toolbar_home">메인화면</string>
    <string name="item_cart_toolbar_person_plus">친구추가</string>
    <string name="tv_main_toolbar_title">배민</string>
    <string name="tv_main_mock_address">송파구 올림픽로 135</string>
    <string name="tv_main_indicator_current">1</string>
    <string name="tv_main_indicator_slash">/</string>
    <string name="tv_main_indicator_total">6</string>
    <string name="tv_main_horizontal_title">조리도 빠른 배민1 가게</string>
    <string name="tv_main_horizontal_mock_store">에밀리아젤라또</string>
    <string name="tv_main_horizontal_mock_rate">4.9</string>
    <string name="tv_main_horizontal_minute">배달</string>
    <string name="tv_main_horizontal_mock_minute">14~24분</string>
    <string name="tv_main_horizontal_tip">배달팁</string>
    <string name="tv_main_horizontal_mock_tip">2,000원</string>
    <string name="tv_main_horizontal_coupon">쿠폰</string>
    <string name="tv_count_kr">수량</string>
    <string name="tv_min_price_kr">배달최소주문금액</string>
    <string name="tv_min_price">15,000원</string>
    <string name="tv_menu_description">초밥24p+날치알대마끼2p+고로케2p \n(흰살생선2p, 연어2p, 토핑연어2p,초새우2p,생새우2p, 간장새우2p,한치2p,계란2p,소고기 스테이크)</string>
</resources>