<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="9dp">

    <ImageView
        android:id="@+id/iv_main_horizontal"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_horizontal_store"
        style="@style/TextAppearance.Pretendard.SemiBold.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/tv_main_horizontal_mock_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@id/tv_main_horizontal_store"
        app:layout_constraintEnd_toStartOf="@id/tv_main_horizontal_rate" />

    <TextView
        android:id="@+id/tv_main_horizontal_rate"
        style="@style/TextAppearance.Pretendard.SemiBold.Body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/tv_main_horizontal_mock_rate"
        app:layout_constraintBottom_toBottomOf="@id/tv_main_horizontal_store"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_main_horizontal_minute_title"
        style="@style/TextAppearance.Pretendard.SemiBold.Body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_main_horizontal_minute"
        android:textColor="@color/gray1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_horizontal_store" />

    <TextView
        android:id="@+id/tv_main_horizontal_minute"
        style="@style/TextAppearance.Pretendard.Regular.Body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_main_horizontal_mock_minute"
        app:layout_constraintStart_toEndOf="@id/tv_main_horizontal_minute_title"
        app:layout_constraintTop_toBottomOf="@id/tv_main_horizontal_store" />

    <TextView
        android:id="@+id/tv_main_horizontal_tip_title"
        style="@style/TextAppearance.Pretendard.SemiBold.Body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_main_horizontal_tip"
        android:textColor="@color/gray1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_horizontal_minute" />

    <TextView
        android:id="@+id/tv_main_horizontal_tip"
        style="@style/TextAppearance.Pretendard.Regular.Body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_main_horizontal_mock_tip"
        app:layout_constraintStart_toEndOf="@id/tv_main_horizontal_tip_title"
        app:layout_constraintTop_toBottomOf="@id/tv_main_horizontal_minute" />

    <ImageView
        android:id="@+id/iv_main_horizontal_delivery"
        android:layout_width="58dp"
        android:layout_height="16dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/img_one_delivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_horizontal_tip_title" />

    <TextView
        style="@style/TextAppearance.Pretendard.Regular.Body4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_orange_round"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:text="@string/tv_main_horizontal_coupon"
        android:textColor="#EF9432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main_horizontal_delivery" />


</androidx.constraintlayout.widget.ConstraintLayout>