<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/layout_bottom"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="match_parent"
                    android:layout_height="169dp"
                    android:background="@color/gray3"
                    android:contentDescription="@string/menu_main_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_store_detail_example"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_best_menu"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="18dp"
                    android:contentDescription="@string/best_menu_image"
                    android:src="@drawable/ic_best_menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_menu" />

                <!-- TextView 높이? 조정해야됨-->
                <TextView
                    android:id="@+id/tv_menu_name"
                    style="@style/TextAppearance.Pretendard.SemiBold.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="26dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_best_menu"
                    app:layout_constraintTop_toBottomOf="@id/iv_menu"
                    tools:text="[커플주문율1위]2인세트A+미니우동2" />


                <TextView
                    android:id="@+id/tv_menu_description"
                    style="@style/TextAppearance.Pretendard.Regular.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/tv_menu_description"
                    android:textColor="@color/gray1"
                    app:layout_constraintEnd_toEndOf="@id/tv_menu_name"
                    app:layout_constraintStart_toStartOf="@id/iv_best_menu"
                    app:layout_constraintTop_toBottomOf="@id/tv_menu_name" />


                <TextView
                    android:id="@+id/tv_base_price_kr"
                    style="@style/TextAppearance.Pretendard.SemiBold.H3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="49dp"
                    android:text="@string/price_kr"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_menu_description" />

                <TextView
                    android:id="@+id/tv_base_price"
                    style="@style/TextAppearance.Pretendard.SemiBold.H3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_base_price_kr"
                    tools:text="34,000" />

                <View
                    android:id="@+id/divider_1"
                    android:layout_width="0dp"
                    android:layout_height="14dp"
                    android:layout_marginTop="14dp"
                    android:background="@color/gray3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_base_price_kr" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_option"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_1"
                    app:layout_constraintVertical_bias="0"
                    tools:listitem="@layout/item_store_option" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_count_kr"
                style="@style/TextAppearance.Pretendard.SemiBold.H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="21dp"
                android:text="@string/tv_count_kr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="132dp"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_count"
                android:padding="9dp"
                app:layout_constraintBottom_toTopOf="@id/divider_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btn_minus"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_minus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_count"
                    style="@style/TextAppearance.Pretendard.SemiBold.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_plus"
                    app:layout_constraintStart_toEndOf="@id/btn_minus"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1개" />

                <ImageView
                    android:id="@+id/btn_plus"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_plus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider_3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="68dp"
                android:background="@color/gray2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/pretendard_regular_font"
                android:text="@string/tv_min_price_kr"
                android:textColor="@color/gray1"
                android:textFontWeight="500"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_3" />

            <TextView
                android:id="@+id/tv_min_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/pretendard_regular_font"
                android:text="@string/tv_min_price"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_add_price"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="11dp"
                android:backgroundTint="@color/main_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView"
                app:layout_constraintTop_toBottomOf="@id/divider_3">

                <TextView
                    android:id="@+id/tv_add_price"
                    style="@style/TextAppearance.Pretendard.SemiBold.H3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    tools:text="41,000원 담기" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
